# nsgd

./: .gitignore  README.md  docker-compose.yml  makefile  package-lock.json  package.json  tsconfig.json  vitest.config.js
anchor/: Anchor.toml
anchor/programs/nsgd/: Cargo.toml
anchor/programs/nsgd/assets/: token-metadata.json
anchor/programs/nsgd/src/: lib.rs
anchor/programs/nsgd/src/constants/: error_code.rs  mod.rs  seeds.rs  token.rs
anchor/programs/nsgd/src/instructions/: init.rs
anchor/programs/nsgd/src/states/: bank.rs  mod.rs
anchor/src/: index.ts  nsgd-exports.ts
anchor/tests/: init.spec.ts  nsgd.spec.ts
anchor/tests/constants/: index.ts
anchor/tests/fixtures/keys/: payer.json  program-owner.json
anchor/tests/utils/: account.util.ts  program.util.ts
src/app/: layout.tsx
src/app/nsgd/: page.tsx
src/components/nsgd/: nsgd-data-access.tsx  nsgd-feature.tsx  nsgd-ui.tsx
src/components/ui/: ui-layout.tsx
